@startuml FuzzyManagerHighLevelClassDiagram
!include ../styleSimple.puml

class SearchMode

class FuzzyManager {
	{static} +rankItems(items: ObservableList, query: String): ObservableList
}

class Fuzzy {
	{static} +delta(query: String, target: String): double
	{static} +levenshtein(a: String, b: String): double
	{static} -distance(a: String, b: String): int
}

SearchMode ..> FuzzyManager : uses >
FuzzyManager..>Fuzzy : uses >

@enduml
